- add jenkins support - separate out the command in prep for pushing back to airlift